Checking in my Tutorial 4 files

--- a/index.html
+++ b/index.html
@@ -2,23 +2,39 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+<style>
+    title {
+        font-family: 'Montserrat', sans-serif;
+    }
+</style>
         <!-- stylesheets and metadata go here -->
-       <title>My CS130 Homepage</title>       
-       <link rel="stylesheet" href="style.css">
+       <title>My CS130 Homepage</title>     
+       <link rel="stylesheet" href="style.css"  
+
    </head>
    <body>
        <!-- HTML content tags go here. Change anything you want! -->
        <header>
            <h1>My CS130 Homepage</h1>
+           <section class="picture">
+               <img src="images/download.jpeg">
+           </section>
        </header> 
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
-                <!-- 
-                    Links to your tutorial assignments go here.
-                    When you submit a new tutorial, add a link to it
-                    here (if applicable)
-                -->
+                <ul>
+                    <li>
+
+                        <a href="tutorial1/index.html"> Tutorial 1</a>
+                    </li>
+                    <li>
+
+                        <a href = "tutorial3/index.html"> Tutorial 3</a>
+                    </li>
+                </ul>
             </section>
             <section id="homework">
                 <h2>Homework</h2>
@@ -27,12 +43,36 @@
                     When you submit a new tutorial, add a link to it
                     here (if applicable)
                 -->
+                <ul>
+                    <li>
+                        Homework 1
+                        <ul>
+                            <li>
+                            <a href="hw1/01_cssgrid/"> Grid Layout</a>
+                            </li>
+                            <li>
+                                <a href="hw1/02_flexbox/">Photo Gallery</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <l
+                </ul>
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
                 <!-- 
                     Links to 5-10 websites that inspire you
                 -->
+                <a href="https://www.utadahikaru.jp/time/">Hikaru Utada 'Time' </a>
+                <footer>Cool Website UI/UX Design</footer>
+                <a href="https://listeningtogether.atspotify.com/">Listening Together - Spotify</a>
+                <footer>Cool Website to show how every second 30k Spotify users play on the same song. I want to apply music.</footer>
+                <a href="https://dwl.media/">SEMPAI</a>
+                <footer>Interest in motion, branding ,photograpy, and cool user interface</footer>
+                <a href="https://lucas-perret.com/">Lucas Perret</a>
+                <footer>An inspiration to create my own portfolio to display my codes.</footer>
+                <a href="https://fwa100.jam3.com/">FWA100 JAM3</a>
+                <footer>I love the color scheme and the background sound and user interaction to tell a story. </footer>
             </section>
         </main>
    </body>
