--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
                         <a href = "tutorial3/index.html"> Tutorial 3</a>
                     </li>
+                    <li>
+
+                        <a href = "tutorial6/index.html"> Tutorial 6</a>
+                    </li>
                 </ul>
             </section>
             <section id="homework">
