main page update

--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
                             </li>
                         </ul>
                     </li>
-                    <l
+                    <li>
+                        Homework 3
+                        <ul>
+                            <li><a href="hw03/index.html">Photo Carousel</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </section>
             <section id="inspiration">
