--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                     <li>
                         Homework 3
                         <ul>
-                            <li><a href="hw03/index.html">Photo Carousel</a></li>
+                            <li>
+                                <a href="hw03/">Photo Carousel</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
