updated github webpage

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                         </ul>
                     </li>
                 </ul>
+                <ul>
+                    <li>Project
+                        <ul><a href="webDesign/index.html">Business Website</a></ul>
+                    </li>
+                </ul>
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
