--- a/webDesign/contact_us.html
+++ b/webDesign/contact_us.html
@@ -29,8 +29,9 @@
     <link rel="stylesheet" href="css/main1.css">
 
     <!-- Get the latest jQuery-->
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
     <!-- Add script plugins -->
     <script src="slick/slick.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.js"></script>
