uploading final proj

--- a/webDesign/index.html
+++ b/webDesign/index.html
@@ -47,6 +47,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
 
 
 </head>
@@ -65,10 +66,10 @@
         <ul>
 
             <li>
-                <a href="/contact.html">
-                    <img src="images/1x/outline_contact_support_white_24dp.png" class="set1">
+                <a href="https://kaihyperion.github.io/cs130/webDesign/contact.html">
+                    <img src="https://kaihyperion.github.io/cs130/webDesign/images/1x/outline_contact_support_white_24dp.png" class="set1">
                     <h2>문의상담</h2>
-                    <img src="images/1x/outline_contact_support_white_24dp.png" class="set2">
+                    <img src="https://kaihyperion.github.io/cs130/webDesign/images/1x/outline_contact_support_white_24dp.png" class="set2">
                 </a>
             </li>
         </ul>
@@ -79,7 +80,7 @@
     <div class = "Main">
         <ul class="slide">
             <li class="slide1">
-                <video src="/video/untitled2.webm" muted autoplay loop></video>
+                <video src="https://kaihyperion.github.io/cs130/webDesign/video/untitled2.webm" muted autoplay loop></video>
 
                 <div class="txtwrap">
                     <div class="textbox">
@@ -102,7 +103,7 @@
                             <dd>아이들이 안전하게 운동할수있도록 도와주는</dd>
                             <dd>전문 줄넘기 교육클럽</dd>
                         </dl>
-                        <a href="/contact.html"><p>상담문의</p></a>
+                        <a href="https://kaihyperion.github.io/cs130/webDesign/contact.html"><p>상담문의</p></a>
                     </div>
                 </div>
             </li>
@@ -116,7 +117,7 @@
                             <dt class="endt">Master/Coach Profile</dt>
                             <dd>관장님 프로파일</dd>
                         </dl>
-                        <a href="/employee.html"><p>프로파일 보기</p></a>
+                        <a href="https://kaihyperion.github.io/cs130/webDesign/employee.html"><p>프로파일 보기</p></a>
                     </div>
                 </div>
             </li>
